--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
- * Soundfry Framework v1.1 (https://soundfry.com/)
+ * Soundfry Framework v1.1
  * Developed 2020-2021 Soundfry Developer Team (https://soundfry.com)
  * Licensed under MIT (https://github.com/Soundfry-Developer/soundfry-framework/blob/main/LICENSE)
  */@font-face {
